Put univariate survival analyses into script.

--- a/figures/survival_vis.ipynb
+++ b/figures/survival_vis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "violent-parade",
+   "id": "violent-tackle",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "competent-philip",
+   "id": "minimal-slovak",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "respected-minimum",
+   "id": "emotional-caribbean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fixed-lighter",
+   "id": "encouraging-mainstream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "imported-lounge",
+   "id": "manual-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "numerous-mozambique",
+   "id": "attractive-avatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "stunning-galaxy",
+   "id": "phantom-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "simple-practice",
+   "id": "collective-currency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "regulation-presence",
+   "execution_count": 9,
+   "id": "recreational-classroom",
    "metadata": {},
    "outputs": [
     {
@@ -239,10 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "white-conversation",
+   "execution_count": 10,
+   "id": "contemporary-promotion",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving 5 x 6.67 in image\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ggsave(paste0(dirs$figures_dir, \"/survival/prognostic_genes.png\"), last_plot(), width = wd, dpi = dpi)"
    ]
