--- a/meta_analysis/survival_meta.ipynb
+++ b/meta_analysis/survival_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prerequisite-compiler",
+   "id": "narrow-berlin",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "forty-mattress",
+   "id": "express-subcommittee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "choice-alexandria",
+   "id": "future-patio",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mobile-workstation",
+   "id": "monthly-philippines",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "vocal-batch",
+   "id": "expressed-skiing",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-sequence",
+   "id": "right-spanish",
    "metadata": {},
    "source": [
     "# Univariate Survival"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "capital-bangkok",
+   "id": "endangered-penny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,22 +114,22 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "formed-duncan",
+   "id": "simplified-camera",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "4"
+       "10"
       ],
       "text/latex": [
-       "4"
+       "10"
       ],
       "text/markdown": [
-       "4"
+       "10"
       ],
       "text/plain": [
-       "[1] 4"
+       "[1] 10"
       ]
      },
      "metadata": {},
@@ -143,56 +143,80 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "expressed-seventh",
+   "id": "premium-chemistry",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A spec_tbl_df: 4 × 5</caption>\n",
+       "<caption>A spec_tbl_df: 10 × 5</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>geneID</th><th scope=col>km_pval</th><th scope=col>km_qval</th><th scope=col>cph_pval</th><th scope=col>cph_qval</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>REG3A   </td><td>0.04881854</td><td>0.3317609</td><td>0.007443063</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>ANGPTL2 </td><td>0.01642883</td><td>0.2977253</td><td>0.003721132</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>SERPIND1</td><td>0.13594952</td><td>0.4568378</td><td>0.012989630</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>COL5A3  </td><td>0.04284721</td><td>0.3317609</td><td>0.012346876</td><td>0.1431721</td></tr>\n",
+       "\t<tr><td>CXCL2  </td><td>0.0002407716</td><td>0.02789489</td><td>0.0008898265</td><td>0.023240547</td></tr>\n",
+       "\t<tr><td>IL1B   </td><td>0.0009832634</td><td>0.03797240</td><td>0.0004481667</td><td>0.017557872</td></tr>\n",
+       "\t<tr><td>LAMC1  </td><td>0.0684853932</td><td>0.54391059</td><td>0.0031423997</td><td>0.054428135</td></tr>\n",
+       "\t<tr><td>FIGF   </td><td>0.0244875096</td><td>0.43981639</td><td>0.0117976482</td><td>0.115549404</td></tr>\n",
+       "\t<tr><td>TNF    </td><td>0.0472823310</td><td>0.50340616</td><td>0.0060013587</td><td>0.078371939</td></tr>\n",
+       "\t<tr><td>LGALS9C</td><td>0.0265735780</td><td>0.43981639</td><td>0.0163736893</td><td>0.128492440</td></tr>\n",
+       "\t<tr><td>CCL17  </td><td>0.1104378480</td><td>0.73156362</td><td>0.0034732113</td><td>0.054428135</td></tr>\n",
+       "\t<tr><td>PLOD2  </td><td>0.0005922877</td><td>0.03431011</td><td>0.0000714658</td><td>0.005599645</td></tr>\n",
+       "\t<tr><td>EGLN3  </td><td>0.1396639457</td><td>0.73156362</td><td>0.0114106823</td><td>0.115549404</td></tr>\n",
+       "\t<tr><td>LAMC2  </td><td>0.2392406336</td><td>0.81522115</td><td>0.0163989227</td><td>0.128492440</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A spec\\_tbl\\_df: 4 × 5\n",
+       "A spec\\_tbl\\_df: 10 × 5\n",
        "\\begin{tabular}{lllll}\n",
        " geneID & km\\_pval & km\\_qval & cph\\_pval & cph\\_qval\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t REG3A    & 0.04881854 & 0.3317609 & 0.007443063 & 0.1431721\\\\\n",
-       "\t ANGPTL2  & 0.01642883 & 0.2977253 & 0.003721132 & 0.1431721\\\\\n",
-       "\t SERPIND1 & 0.13594952 & 0.4568378 & 0.012989630 & 0.1431721\\\\\n",
-       "\t COL5A3   & 0.04284721 & 0.3317609 & 0.012346876 & 0.1431721\\\\\n",
+       "\t CXCL2   & 0.0002407716 & 0.02789489 & 0.0008898265 & 0.023240547\\\\\n",
+       "\t IL1B    & 0.0009832634 & 0.03797240 & 0.0004481667 & 0.017557872\\\\\n",
+       "\t LAMC1   & 0.0684853932 & 0.54391059 & 0.0031423997 & 0.054428135\\\\\n",
+       "\t FIGF    & 0.0244875096 & 0.43981639 & 0.0117976482 & 0.115549404\\\\\n",
+       "\t TNF     & 0.0472823310 & 0.50340616 & 0.0060013587 & 0.078371939\\\\\n",
+       "\t LGALS9C & 0.0265735780 & 0.43981639 & 0.0163736893 & 0.128492440\\\\\n",
+       "\t CCL17   & 0.1104378480 & 0.73156362 & 0.0034732113 & 0.054428135\\\\\n",
+       "\t PLOD2   & 0.0005922877 & 0.03431011 & 0.0000714658 & 0.005599645\\\\\n",
+       "\t EGLN3   & 0.1396639457 & 0.73156362 & 0.0114106823 & 0.115549404\\\\\n",
+       "\t LAMC2   & 0.2392406336 & 0.81522115 & 0.0163989227 & 0.128492440\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A spec_tbl_df: 4 × 5\n",
+       "A spec_tbl_df: 10 × 5\n",
        "\n",
        "| geneID &lt;chr&gt; | km_pval &lt;dbl&gt; | km_qval &lt;dbl&gt; | cph_pval &lt;dbl&gt; | cph_qval &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| REG3A    | 0.04881854 | 0.3317609 | 0.007443063 | 0.1431721 |\n",
-       "| ANGPTL2  | 0.01642883 | 0.2977253 | 0.003721132 | 0.1431721 |\n",
-       "| SERPIND1 | 0.13594952 | 0.4568378 | 0.012989630 | 0.1431721 |\n",
-       "| COL5A3   | 0.04284721 | 0.3317609 | 0.012346876 | 0.1431721 |\n",
+       "| CXCL2   | 0.0002407716 | 0.02789489 | 0.0008898265 | 0.023240547 |\n",
+       "| IL1B    | 0.0009832634 | 0.03797240 | 0.0004481667 | 0.017557872 |\n",
+       "| LAMC1   | 0.0684853932 | 0.54391059 | 0.0031423997 | 0.054428135 |\n",
+       "| FIGF    | 0.0244875096 | 0.43981639 | 0.0117976482 | 0.115549404 |\n",
+       "| TNF     | 0.0472823310 | 0.50340616 | 0.0060013587 | 0.078371939 |\n",
+       "| LGALS9C | 0.0265735780 | 0.43981639 | 0.0163736893 | 0.128492440 |\n",
+       "| CCL17   | 0.1104378480 | 0.73156362 | 0.0034732113 | 0.054428135 |\n",
+       "| PLOD2   | 0.0005922877 | 0.03431011 | 0.0000714658 | 0.005599645 |\n",
+       "| EGLN3   | 0.1396639457 | 0.73156362 | 0.0114106823 | 0.115549404 |\n",
+       "| LAMC2   | 0.2392406336 | 0.81522115 | 0.0163989227 | 0.128492440 |\n",
        "\n"
       ],
       "text/plain": [
-       "  geneID   km_pval    km_qval   cph_pval    cph_qval \n",
-       "1 REG3A    0.04881854 0.3317609 0.007443063 0.1431721\n",
-       "2 ANGPTL2  0.01642883 0.2977253 0.003721132 0.1431721\n",
-       "3 SERPIND1 0.13594952 0.4568378 0.012989630 0.1431721\n",
-       "4 COL5A3   0.04284721 0.3317609 0.012346876 0.1431721"
+       "   geneID  km_pval      km_qval    cph_pval     cph_qval   \n",
+       "1  CXCL2   0.0002407716 0.02789489 0.0008898265 0.023240547\n",
+       "2  IL1B    0.0009832634 0.03797240 0.0004481667 0.017557872\n",
+       "3  LAMC1   0.0684853932 0.54391059 0.0031423997 0.054428135\n",
+       "4  FIGF    0.0244875096 0.43981639 0.0117976482 0.115549404\n",
+       "5  TNF     0.0472823310 0.50340616 0.0060013587 0.078371939\n",
+       "6  LGALS9C 0.0265735780 0.43981639 0.0163736893 0.128492440\n",
+       "7  CCL17   0.1104378480 0.73156362 0.0034732113 0.054428135\n",
+       "8  PLOD2   0.0005922877 0.03431011 0.0000714658 0.005599645\n",
+       "9  EGLN3   0.1396639457 0.73156362 0.0114106823 0.115549404\n",
+       "10 LAMC2   0.2392406336 0.81522115 0.0163989227 0.128492440"
       ]
      },
      "metadata": {},
@@ -205,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opponent-opportunity",
+   "id": "seventh-silence",
    "metadata": {},
    "source": [
     "# Cox PH Lasso"
@@ -214,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sound-replacement",
+   "id": "sealed-blocking",
    "metadata": {},
    "outputs": [],
    "source": []
